--- a/BakeItHappen/home.html
+++ b/BakeItHappen/home.html
@@ -44,7 +44,7 @@
                             </a> 
                         </li> 
                         <li class="nav-item "> 
-                            <a href="register.php" type="php" class="nav-link rounded-right " href="/home2.html"> 
+                            <a href="register1.php" type="php" class="nav-link rounded-right "> 
                             Login/Signup 
                             </a> 
                         </li> 
