--- a/BakeItHappen/home.html
+++ b/BakeItHappen/home.html
@@ -38,13 +38,13 @@
                             </a> 
                         </li>  -->
 
-                        <li class="nav-item"> 
+                        <!--<li class="nav-item"> 
                             <a class="nav-link  " href="submit.html"> 
                             Submit Recipe 
                             </a> 
-                        </li> 
+                        </li> -->
                         <li class="nav-item "> 
-                            <a href="register1.php" type="php" class="nav-link rounded-right "> 
+                            <a href="register.php" type="php" class="nav-link rounded-right "> 
                             Login/Signup 
                             </a> 
                         </li> 
